--- a/index.html
+++ b/index.html
@@ -2,5 +2,13 @@
 <head></head>
 <body>
 <h2>Bye-bye World!</h2>
+
+<!-- My custom button -->
+<button>Click me!</button>
+
+
+
+
+
 </body>
 </html>
