--- a/index.html
+++ b/index.html
@@ -1,9 +1,58 @@
 <html>
-<head></head>
-<body>
-<h2>Bye-bye World!</h2>
+<head>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+</head>
+<body style="margin: 0">
 
-<button>Click me!</button>
+<div style="margin: 20px; width: 400px">
 
+    <table class="table">
+        <thead class="thead-dark">
+        <th>ID</th>
+        <th>Name</th>
+        </thead>
+        <tbody>
+        <tr><td>1</td><td>Viktor</td></tr>
+        <tr><td>2</td><td>Maria</td></tr>
+        </tbody>
+    </table>
+
+
+<form>
+    <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
+    <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+<!--
+
+<header style="height: 5%; background-color: bisque">This is header</header>
+<div style="
+    height: 195%;
+    width: 25%;
+    display: inline-block;
+    background-color: blue;
+">DISPLAY</div><div style="
+    width: 75%;
+    display: inline-block;
+    background-color: #ff7373;
+    height: 195%;
+">
+    <button>Click me</button>
+
+</div>
+-->
 </body>
 </html>
